<resources>
    <string name="app_name">Ваш Гараж  8(904)654-65-65 </string>
    <string name="enter_part_number">Введите номер з/ч</string>
    <string name="button_search">Поиск</string>
    <string name="button_cancel">Отмена</string>
    <string name="title_add_to_basket">Добавления товара в корзину</string>
    <string name="quantity_to_basket">кол-во</string>
    <string name="comment">Комментарий</string>
    <string name="button_add_to_basket">В корзину</string>
    <string name="title_quantity">Укажите колличество</string>
    <string name="button_create_order">Оформить заказ</string>
    <string name="button_clear_basket">Очистить корзину</string>
    <string name="warning_item_to_basket">Данный товар уже в корзине</string>
    <string name="hint_comment">комментарий</string>
    <string name="button_continue">Продолжить</string>

    <string name="item_main">Главная</string>
    <string name="item_basket">Корзина</string>

</resources>
